# ultimate_tictactoe

./: .gitignore  MANIFEST.in  README.md  main.py  setup.cfg  ultimate_tictactoe.ipynb  ultimate_tictactoe_colab.ipynb
ai/: __init__.py  heuristic.py  heuristic_weights.json  minimax.py  player.py  tt.py
game/: board.py  clock.py  display.py  game.py  rules.py
scripts/: build_wheel.py  colab_snippet.md  train_selfplay.py
tests/: test_rules.py
ultimate_tictactoe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
