[metadata]
name = ultimate_tictactoe
version = 0.1.0
description = Ultimate Tic-Tac-Toe with Minimax AI
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT

[options]
packages = find:
python_requires = >=3.8
include_package_data = true

[options.packages.find]
where = .
